🐛(scenario-designer) fix bug when delete a context link to an intent

--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
@@ -202,7 +202,7 @@
               status="danger"
               class="min-width-1em ml-2 pointer"
               nbTooltip="Remove this context from outputs"
-              (click)="removeContext('output', outputContext)"
+              (click)="removeContext(outputContext)"
             ></nb-icon>
           </nb-list-item>
         </nb-list>
