--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/scenario-production.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-production/scenario-production.component.html
@@ -1,5 +1,8 @@
 <tock-scenario-canvas-wrapper (onSidePanelChange)="sidePanelChange($event)">
-  <nb-accordion menu-body>
+  <nb-accordion
+    multi
+    menu-body
+  >
     <nb-accordion-item expanded>
       <nb-accordion-item-header>Actions</nb-accordion-item-header>
       <nb-accordion-item-body>
