--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.html
@@ -89,28 +89,13 @@
         [controls]="handler"
         [showError]="isSubmitted"
       >
-        <input
+        <tock-autocomplete-input
           *ngIf="!isReadonly"
-          nbInput
           formControlName="handler"
-          fullWidth
-          id="handler"
-          type="text"
-          tock-delay
           placeholder="Enter handler class name"
-          autocomplete="off"
-          [nbAutocomplete]="handlersAutocomplete"
-          (focus)="updateHandlersAutocompleteValues()"
-          (keyup)="updateHandlersAutocompleteValues($event)"
-        />
-        <nb-autocomplete #handlersAutocomplete>
-          <nb-option
-            *ngFor="let option of handlersAutocompleteValues | async"
-            [value]="option"
-          >
-            {{ option }}
-          </nb-option>
-        </nb-autocomplete>
+          name="handler"
+          [options]="handlers"
+        ></tock-autocomplete-input>
         <span
           *ngIf="isReadonly"
           class="text-mitigated"
@@ -129,6 +114,13 @@
         >
           <div class="d-flex">
             <div class="w-100">
+              <!-- <tock-autocomplete-input
+                *ngIf="!isReadonly"
+                placeholder="Add an input context and press enter"
+                name="inputContexts"
+                [options]="contextsValues"
+                (onKeyup)="resetContextsAddErrors(); addInputContext($event, 'input')"
+              ></tock-autocomplete-input> -->
               <input
                 #inputContextsInput
                 nbInput
@@ -143,7 +135,10 @@
                 (focus)="updateContextsAutocompleteValues()"
                 (keyup)="updateContextsAutocompleteValues($event)"
               />
-              <nb-autocomplete #inputContextsAutocomplete>
+              <nb-autocomplete
+                #inputContextsAutocomplete
+                optionsListClass="option-list--break-word"
+              >
                 <nb-option
                   *ngFor="let option of contextsAutocompleteValues | async"
                   [value]="option"
@@ -167,7 +162,12 @@
           </div>
         </tock-form-control>
 
-        <label *ngIf="isReadonly">Input contexts</label>
+        <label
+          *ngIf="isReadonly"
+          class="font-weight-bold text-mitigated"
+        >
+          Input contexts
+        </label>
 
         <nb-list class="contexts-list">
           <nb-list-item
@@ -244,33 +244,19 @@
         [controls]="trigger"
         [showError]="isSubmitted"
       >
-        <input
+        <tock-autocomplete-input
           *ngIf="!isReadonly"
-          nbInput
           formControlName="trigger"
-          fullWidth
-          id="trigger"
-          type="text"
-          tock-delay
           placeholder="Add an event"
-          autocomplete="off"
-          [nbAutocomplete]="triggersAutocomplete"
-          (focus)="updateTriggersAutocompleteValues()"
-          (keyup)="updateTriggersAutocompleteValues($event)"
-        />
-        <nb-autocomplete #triggersAutocomplete>
-          <nb-option
-            *ngFor="let option of triggersAutocompleteValues | async"
-            [value]="option"
-          >
-            {{ option }}
-          </nb-option>
-        </nb-autocomplete>
+          name="trigger"
+          keyLabel="name"
+          [options]="triggers"
+        ></tock-autocomplete-input>
         <span
           *ngIf="isReadonly"
           class="text-mitigated"
         >
-          {{ trigger }}
+          {{ trigger.value }}
         </span>
       </tock-form-control>
 
@@ -298,7 +284,10 @@
                 (focus)="updateContextsAutocompleteValues()"
                 (keyup)="updateContextsAutocompleteValues($event)"
               />
-              <nb-autocomplete #outputContextsAutocomplete>
+              <nb-autocomplete
+                #outputContextsAutocomplete
+                optionsListClass="option-list--break-word"
+              >
                 <nb-option
                   *ngFor="let option of contextsAutocompleteValues | async"
                   [value]="option"
@@ -322,7 +311,12 @@
           </div>
         </tock-form-control>
 
-        <label *ngIf="isReadonly">Output contexts</label>
+        <label
+          *ngIf="isReadonly"
+          class="font-weight-bold text-mitigated"
+        >
+          Output contexts
+        </label>
 
         <nb-list class="contexts-list">
           <nb-list-item
