--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
@@ -26,23 +26,23 @@
                 *ngIf="intent.done"
               ></nb-icon>
               <div>
-                <strong>{{ intent.data.intentDefinition.name }}</strong>
+                <strong>{{ intent.item.intentDefinition.name }}</strong>
                 <div>
                   label :
                   <span class="text-mitigated">
-                    {{ intent.data.intentDefinition.label }}
+                    {{ intent.item.intentDefinition.label }}
                   </span>
                 </div>
                 <div>
                   category :
                   <span class="text-mitigated">
-                    {{ intent.data.intentDefinition.category }}
+                    {{ intent.item.intentDefinition.category }}
                   </span>
                 </div>
-                <div *ngIf="intent.data.intentDefinition.description">
+                <div *ngIf="intent.item.intentDefinition.description">
                   description :
                   <span class="text-mitigated">
-                    {{ intent.data.intentDefinition.description }}
+                    {{ intent.item.intentDefinition.description }}
                   </span>
                 </div>
               </div>
@@ -79,7 +79,46 @@
                 status="success"
                 *ngIf="answer.done"
               ></nb-icon>
-              {{ answer.data.actionDefinition.answer }}
+              {{ answer.item.actionDefinition.answer }}
+            </div>
+          </div>
+        </div>
+      </ng-container>
+
+      <ng-container *ngFor="let unknownAnswerJobsType of [dependencies.unknownAnswersToCreate, dependencies.unknownAnswersToUpdate]">
+        <div
+          *ngIf="unknownAnswerJobsType.length"
+          class="mt-3"
+        >
+          <h5>
+            The <span *ngIf="unknownAnswerJobsType.length > 1">{{ unknownAnswerJobsType.length }}</span> following question<span
+              *ngIf="unknownAnswerJobsType.length > 1"
+              >s</span
+            >
+            for an unknown answer
+
+            <span *ngIf="!areAllJobsTypeDone(unknownAnswerJobsType)"> will be </span>
+            <span *ngIf="areAllJobsTypeDone(unknownAnswerJobsType)"> have been </span>
+
+            <span *ngIf="getJobsType(unknownAnswerJobsType) == 'creation'"> created </span>
+            <span *ngIf="getJobsType(unknownAnswerJobsType) == 'update'"> updated </span>
+          </h5>
+
+          <div class="row">
+            <div
+              *ngFor="let item of unknownAnswerJobsType"
+              class="col-12 col-md-6 mb-2 d-flex break-word"
+            >
+              <!-- <pre>
+                {{ item | json }}
+              </pre> -->
+
+              <nb-icon
+                icon="checkmark-outline"
+                status="success"
+                *ngIf="item.done"
+              ></nb-icon>
+              {{ item.answer.answer }}
             </div>
           </div>
         </div>
