--- a/bot/admin/web/src/app/shared/components/form-control/form-control.component.html
+++ b/bot/admin/web/src/app/shared/components/form-control/form-control.component.html
@@ -5,9 +5,7 @@
 >
   <label
     *ngIf="label"
-    [ngClass]="{ 'font-weight-bold': boldLabel, 'text-mitigated': true }"
-    [class.required]="required"
-    [class.hasError]="showError && !!controls.errors"
+    [ngClass]="{ 'font-weight-bold': boldLabel, 'text-mitigated': true, required: required, hasError: showError && !!controls.errors }"
     [for]="name"
     data-testid="label"
   >
