--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/intent-edit/intent-edit.component.html
@@ -37,7 +37,7 @@
           {{ item.intentDefinition.intentId }}
         </span>
       </div>
-      <div class="col-md-4">
+      <div class="col-12">
         <label class="font-weight-bold">Name :</label>
         <span>
           {{ item.intentDefinition.name }}
@@ -45,7 +45,7 @@
       </div>
       <div
         *ngIf="item.intentDefinition.label"
-        class="col-md-4"
+        class="col-12"
       >
         <label class="font-weight-bold">Label :</label>
         <span>
@@ -63,7 +63,7 @@
       </div>
       <div
         *ngIf="item.intentDefinition.category"
-        class="col-md-4"
+        class="col-12"
       >
         <label class="font-weight-bold">Category :</label>
         <span>
