--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-publishing/scenario-publishing.component.html
@@ -61,25 +61,24 @@
               *ngIf="answerJobsType.length > 1"
               >s</span
             >
-
             <span *ngIf="!areAllJobsTypeDone(answerJobsType)"> will be </span>
             <span *ngIf="areAllJobsTypeDone(answerJobsType)"> have been </span>
-
             <span *ngIf="getJobsType(answerJobsType) == 'creation'"> created </span>
             <span *ngIf="getJobsType(answerJobsType) == 'update'"> updated </span>
           </h5>
 
           <div class="row">
             <div
-              *ngFor="let answer of answerJobsType"
+              *ngFor="let item of answerJobsType"
               class="col-12 col-md-6 mb-2 d-flex break-word"
             >
               <nb-icon
                 icon="checkmark-outline"
                 status="success"
-                *ngIf="answer.done"
+                *ngIf="item.done"
               ></nb-icon>
-              {{ answer.item.actionDefinition.answer }}
+              <span class="text-uppercase text-nowrap">[{{ item.answer.locale }}]</span>
+              {{ item.answer.answer }}
             </div>
           </div>
         </div>
@@ -94,7 +93,8 @@
             The <span *ngIf="unknownAnswerJobsType.length > 1">{{ unknownAnswerJobsType.length }}</span> following question<span
               *ngIf="unknownAnswerJobsType.length > 1"
               >s</span
-            >for an unknown answer
+            >
+            for an unknown answer
             <span *ngIf="!areAllJobsTypeDone(unknownAnswerJobsType)"> will be </span>
             <span *ngIf="areAllJobsTypeDone(unknownAnswerJobsType)"> have been </span>
             <span *ngIf="getJobsType(unknownAnswerJobsType) == 'creation'"> created </span>
@@ -111,6 +111,7 @@
                 status="success"
                 *ngIf="item.done"
               ></nb-icon>
+              <span class="text-uppercase text-nowrap">[{{ item.answer.locale }}] </span>
               {{ item.answer.answer }}
             </div>
           </div>
