--- a/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.html
+++ b/bot/admin/web/src/app/scenarios/scenario-designer/scenario-conception/action-edit/action-edit.component.html
@@ -49,7 +49,7 @@
           <div
             *ngIf="!isReadonly"
             class="position-absolute"
-            style="left: 50%"
+            style="left: 49%"
           >
             <nb-icon
               icon="arrowhead-up-outline"
@@ -88,7 +88,7 @@
           <div
             *ngIf="!isReadonly"
             class="position-absolute"
-            style="left: 50%"
+            style="left: 49%"
           >
             <nb-icon
               *ngIf="!isReadonly"
@@ -141,7 +141,7 @@
         >
           <small
             (click)="showAnswersLocales = !showAnswersLocales"
-            class="d-block mb-1"
+            class="d-block mb-1 pointer"
           >
             <nb-icon
               *ngIf="!showAnswersLocales"
@@ -159,7 +159,7 @@
           <div *ngIf="showAnswersLocales">
             <ng-container *ngFor="let localeAnswerDef of answers.value; let i = index">
               <ng-container *ngIf="localeAnswerDef.locale != currentLocale">
-                <tock-form-control name="answer">
+                <tock-form-control name="answer{{ i }}">
                   <nb-form-field *ngIf="!isReadonly">
                     <div
                       nbPrefix
