⬆️(app): upgrade angular 11 to 12

--- a/bot/admin/web/src/styles.css
+++ b/bot/admin/web/src/styles.css
@@ -21,7 +21,7 @@
 
 /* Workaround: icon displayed twice */
 nb-icon.material-icons:before {
-    content: "" !important;
+  content: '' !important;
 }
 
 html,
@@ -30,5 +30,5 @@ body {
 }
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: sans-serif;
 }
