resolves #1418 Import model of shared namespace

--- a/nlp/admin/web/src/app/intents/intents.component.css
+++ b/nlp/admin/web/src/app/intents/intents.component.css
@@ -107,7 +107,7 @@ button:focus {
 }
 
 .entities {
-  width: 30%;
+  width: 25%;
   text-align: center;
 }
 
@@ -116,5 +116,5 @@ button:focus {
 }
 
 .intent {
-  width: 15%;
+  width: 200px
 }
