⬆️(app): upgrade angular 12 to 13

--- a/bot/admin/web/src/app/faq/faq-management/faq-management-edit/faq-management-edit.component.html
+++ b/bot/admin/web/src/app/faq/faq-management/faq-management-edit/faq-management-edit.component.html
@@ -105,10 +105,7 @@
           [showError]="isSubmitted"
           data-testid="tags"
         >
-          <nb-tag-list
-            tock-delay
-            (tagRemove)="onTagRemove($event)"
-          >
+          <nb-tag-list (tagRemove)="onTagRemove($event)">
             <nb-tag
               *ngFor="let tag of tags.value"
               removable
