--- a/bot/admin/web/src/app/faq/faq-training/faq-training-list/faq-training-list.component.scss
+++ b/bot/admin/web/src/app/faq/faq-training/faq-training-list/faq-training-list.component.scss
@@ -1,4 +1,4 @@
-@import '~@nebular/theme/styles/global/_breakpoints.scss';
+@import '~@nebular/theme/styles/global/breakpoints';
 @import '~@nebular/theme/styles/theming';
 @import '~@nebular/theme/styles/themes';
 
